# webrtc-iot

./: .gitmodules  CMakeLists.txt  README.md  README_zh.md  idf_component.yml  validation_summary.md
include/: address.h  agent.hpp  base64.h  config.h  dtls_srtp.hpp  ice.hpp  mdns.h  network_config.h  peer_connection.hpp  ports.h  rtcp.hpp  rtp.hpp  sctp.hpp  sdp.hpp  socket.h  stun.h  utils.h
src/: CMakeLists.txt  address.c  agent.cpp  dtls_srtp.cpp  ice.cpp  peer_connection.cpp  rtcp.cpp  rtp.cpp  sctp.cpp  sdp.cpp  socket.c
tests/: CMakeLists.txt  test_agent.cpp  test_dtls.cpp  test_peer_connection.cpp  test_peer_offer.cpp
